feat: The solution to the exercise is constructed.